# puppygrad

./: .gitignore  Cargo.toml  package.json  readme.md  todo.md
benchmarks/: gpt2_experiment_history.csv  gpt2_progress.csv  gpt2_prompts.txt
docs/: amd-aco-machine-instructions.md  intel-brw-operations.md  model-runtime.md  nvidia-assembly-ir.md  nvidia-nak-opcodes-sm70.md
examples/: mnist.grad  simple.grad
src/: audio.rs  clang.ts  codegen.rs  dense.rs  flatten.rs  graph_ir.rs  layer.rs  lib.rs  lower.test.ts  lower.ts  main.rs  op.ts  parser.rs  pattern.test.ts  pattern.ts  realize.ts  sequential.rs  simple.ts  tensor.rs  tensor.test.ts  tensor.ts
src/engine/: mod.rs
src/gpu/nvidia/: asm.rs  binary.rs  mod.rs
src/models/: assets.rs  autoregressive.rs  autotune.rs  config.rs  cpu.rs  generation.rs  gpt2.rs  mod.rs  safetensors.rs  streaming.rs
src/models/gpt2/: assets.rs  error.rs  mod.rs  options.rs  rust.rs
src/models/resnet/: config.rs  mod.rs  model.rs  runtime.rs  rust.rs  weights.rs
src/models/whisper/: assets.rs  audio.rs  config.rs  error.rs  features.rs  mod.rs  model.rs  preprocessor.rs  realtime.rs  runtime.rs  tokenizer.rs  weights.rs
src/runtime/: thread_pool.rs
src/vision/: cnn.rs  mod.rs
tests/: cli.rs
tests/data/audio/: README.md
tests/data/images/: README.md
tests/data/whisper/: README.md
