[package]
name = "puppygrad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.4.3"
